--- a/public/style.css
+++ b/public/style.css
@@ -2,30 +2,15 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-:root {
-  /* CSS HSL */
-  /* https://coolors.co/ */
-
-  --primaria: hsla(210, 67%, 43%, 1);
-  --background: #EAEAEA;
-  --secundaria: #ffffff;
-  --destaque: #002555;
-  --detalhe: #002555;
-
-
-/*  --primaria: hsla(0, 1%, 20%, 1);
-  --background: hsla(81, 21%, 74%, 1);
-  --secundaria: hsla(135, 7%, 64%, 1);
-  --destaque: hsla(8, 34%, 54%, 1);
-  --detalhe:hsla(241, 96%, 72%, 1);*/
-}
 
 /* borda vermelha em todos os elementos para debug */
-/*
+
 * {
+  margin : 0;
+  padding: 0;
   outline: red solid 1px;
 }
-*/
+
 
 body {
   margin: 0;
